<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userpass"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/kor_ime_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/kor_ime"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logIn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/lozinka_hint"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentTop="true"
        android:contentDescription="logo"
        android:src="@drawable/rock_climb" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userpass"
        android:layout_centerHorizontal="true"
        android:text="@string/lozinka"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="58dp"
        android:text="@string/gumb_prijava" />

    <Button
        android:id="@+id/gumb_registriraj_se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logIn"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/logIn"
        android:text="Registriraj se" />

</RelativeLayout>
